--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-todos-playground",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -24,6 +24,8 @@
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
+    "todomvc-app-css": "^2.0.6",
+    "todomvc-common": "^1.0.2",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
