--- a/package.json
+++ b/package.json
@@ -4,45 +4,46 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "ng server",
-    "postinstall": "typings install",
+    "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "postinstall": "cat ./node_modules/todomvc-common/base.css ./node_modules/todomvc-app-css/index.css > ./src/index.css"
   },
   "private": true,
   "dependencies": {
     "@angular/common": "2.0.0-rc.4",
     "@angular/compiler": "2.0.0-rc.4",
     "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
     "@angular/http": "2.0.0-rc.4",
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/platform-server": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
-    "es6-shim": "^0.35.0",
+    "core-js": "^2.4.0",
+    "lodash": "^4.14.1",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.26",
     "todomvc-app-css": "^2.0.6",
     "todomvc-common": "^1.0.2",
-    "zone.js": "^0.6.12"
+    "ts-helpers": "^1.1.1",
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "angular-cli": "^1.0.0-beta.5",
-    "codelyzer": "0.0.19",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "jasmine-core": "^2.4.1",
-    "jasmine-spec-reporter": "^2.4.0",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-jasmine": "^0.3.8",
-    "lodash": "^4.13.1",
-    "protractor": "^3.3.0",
-    "ts-node": "^0.5.5",
-    "tslint": "^3.6.0",
-    "typescript": "^1.8.10",
-    "typings": "^0.8.1"
+    "@types/jasmine": "^2.2.30",
+    "@types/protractor": "^1.5.16",
+    "angular-cli": "1.0.0-beta.11-webpack",
+    "codelyzer": "0.0.26",
+    "jasmine-core": "2.4.1",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "0.2.3",
+    "karma-coverage": "^1.0.0",
+    "karma-jasmine": "0.3.8",
+    "protractor": "3.3.0",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
+    "typescript": "^2.0.0"
   }
 }
